max-width prevents horizontal scroll when width is set to something else, like auto (such as in our display inline block example)

--- a/src/select-css.css
+++ b/src/select-css.css
@@ -9,6 +9,7 @@
 	padding: .6em 1.4em .5em .8em;
 	text-wrap: wrap;
 	width: 100%;
+	max-width: 100%; /* useful when width is set to anything other than 100% */
 	box-sizing: border-box;
 	margin: 0;
 	border: 1px solid #aaa;
